tests/baselines/reference/thisInSuperCall1.errors.txt
tests/cases/compiler/thisInSuperCall1.ts(7,15): error TS2332: 'this' cannot be referenced in current location.
tests/cases/compiler/thisInSuperCall1.ts(7,15): error TS17008: 'super' must be called before accessing 'this' in the constructor of a derived class.


==== tests/cases/compiler/thisInSuperCall1.ts (2 errors) ====
    class Base { 
        constructor(a: any) {}
    }
    
    class Foo extends Base {
        constructor(public x: number) {
            super(this);
                  ~~~~
!!! error TS2332: 'this' cannot be referenced in current location.
                  ~~~~
!!! error TS17008: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }
    